--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.3.3",
     "axios": "^0.23.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
@@ -19,6 +20,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vant": "^2.12.30",
     "vue": "^2.6.11",
+    "vue-promised": "^2.2.0",
     "vue-router": "^3.5.3",
     "vue-slim-better-scroll": "^1.7.1",
     "vuex": "^3.4.0"
