--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .DS_Store
 node_modules
 /dist
+/epc-app
 .history
-
 
 # local env files
 .env.local
@@ -22,3 +22,5 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+*.zip
+*.7z
