--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build-report": "vue-cli-service build --report",
     "build-dev": "vue-cli-service build --mode development",
     "lint": "vue-cli-service lint",
-    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/"
+    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/",
+    "clean": "node scripts/clean.js"
   },
   "dependencies": {
     "@vue/composition-api": "^1.3.3",
