--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-report": "vue-cli-service build --report",
     "build-dev": "vue-cli-service build --mode development",
     "lint": "vue-cli-service lint",
-    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/",
+    "lint-fix": "eslint --fix --ext .js --ext .vue src/",
     "clean": "node scripts/clean.js"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "echarts": "^5.2.1",
     "lodash": "^4.17.21",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "v-promised-beta": "^1.0.1",
     "vant": "^2.12.30",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
@@ -37,6 +38,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
     "eruda": "^2.4.1",
@@ -50,6 +52,7 @@
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
     "postcss-px-to-viewport": "^1.1.1",
+    "rimraf": "^3.0.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "svg-sprite-loader": "^6.0.10",
