--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build-report": "vue-cli-service build --report",
-    "build-dev": "vue-cli-service build --mode development",
+    "build:report": "vue-cli-service build --report",
+    "build:dev": "vue-cli-service build --mode development",
     "lint": "vue-cli-service lint",
-    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/",
-    "clean": "node scripts/clean.js"
+    "lint:fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/",
+    "clean": "node scripts/clean.js",
+    "docs:dev": "vuepress dev docs --temp .temp",
+    "docs:build": "vuepress build docs"
   },
   "dependencies": {
     "@vue/composition-api": "^1.3.3",
@@ -37,6 +39,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
+    "@vuepress/plugin-back-to-top": "^1.8.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
     "eruda": "^2.4.1",
@@ -55,6 +58,7 @@
     "svg-sprite-loader": "^6.0.10",
     "svgo-loader": "^3.0.0",
     "vue-template-compiler": "^2.6.11",
+    "vuepress": "^1.8.2",
     "webpack-bundle-analyzer": "^4.5.0"
   },
   "gitHooks": {
