--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build-report": "vue-cli-service build --report",
-    "build-dev": "vue-cli-service build --mode development",
+    "build:report": "vue-cli-service build --report",
+    "build:dev": "vue-cli-service build --mode development",
+    "build:test": "vue-cli-service build --mode testing",
     "lint": "vue-cli-service lint",
-    "lint-fix": "eslint --fix --ext .js --ext .vue src/",
-    "clean": "node scripts/clean.js"
+    "lint:fix": "eslint --fix --ext .js --ext .vue src/",
+    "clean": "rimraf",
+    "clean:build": "rimraf *.zip"
   },
   "dependencies": {
     "@vue/composition-api": "^1.3.3",
@@ -18,8 +20,6 @@
     "crypto-js": "^4.1.1",
     "echarts": "^5.2.1",
     "lodash": "^4.17.21",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "v-promised-beta": "^1.0.1",
     "vant": "^2.12.30",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
@@ -38,7 +38,6 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
     "eruda": "^2.4.1",
@@ -57,6 +56,7 @@
     "sass-loader": "^8.0.2",
     "svg-sprite-loader": "^6.0.10",
     "svgo-loader": "^3.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue-template-compiler": "^2.6.11",
     "webpack-bundle-analyzer": "^4.5.0"
   },
@@ -68,5 +68,8 @@
       "vue-cli-service lint",
       "git add"
     ]
-  }
+  },
+  "eslintIgnore": [
+    "**/v-promised"
+  ]
 }
